--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+# data
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 
+# H2 console
+spring.h2.console.enabled=true
+
+# logging
+logging.level.org.springframework.security=DEBUG
+
+# show message on client when exception is raised in controller on server
+server.error.include-message=always
+server.error.include-binding-errors=always
