Added date time formatting properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ logging.level.org.springframework.security=DEBUG
 # show message on client when exception is raised in controller on server
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+# date-time format
+spring.mvc.format.date=dd-MM-yyyy
+spring.mvc.format.date-time=dd-MM-yyyy HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
